# krypton

./: .gitignore  Cargo.toml  justfile  list.kr  settings.gradle.kts  winner.kr
crates/codegen/: Cargo.toml
crates/codegen/benches/: codegen_bench.rs
crates/codegen/src/: diagnostics.rs  emit.rs  jar.rs  lib.rs
crates/codegen/src/emit/: builder.rs  calls.rs  class_gen.rs  compiler.rs  data_class_gen.rs  expr.rs  intrinsics.rs  lambda.rs  mod.rs  pattern.rs  registration.rs  repl.rs  test_harness.rs  trait_class_gen.rs
crates/codegen/tests/: classfile_test.rs  codegen_test.rs  fixture_test.rs  interface_boundary_test.rs  jar_test.rs
crates/codegen/tests/codegen/: classfile.rs  codegen_tests.rs  fixtures.rs  interface_boundary.rs  jar.rs  mod.rs
crates/codegen_js/: Cargo.toml
crates/codegen_js/src/: diagnostics.rs  emit.rs  lib.rs  repl.rs  suspend.rs
crates/codegen_js/tests/: fixture_test.rs  interface_boundary_test.rs  main.rs
crates/codegen_js/tests/codegen_js/: fixtures.rs  interface_boundary.rs  mod.rs
crates/ir/: Cargo.toml
crates/ir/src/: expr.rs  lib.rs  link.rs  lint.rs  lower.rs  pass.rs  pretty.rs  visit.rs
crates/ir/src/lower/: anf.rs  bind.rs  call.rs  control.rs  ctx.rs  dict.rs  expr.rs  lambda_fn.rs  mod.rs  module_pipeline.rs  op_resolve.rs  patmat.rs  register.rs  resolved.rs  scope.rs  type_expr.rs  util.rs
crates/ir/tests/: lint_test.rs  lower_test.rs
crates/ir/tests/ir/: lint.rs  lower.rs  mod.rs  visit.rs
crates/ir/tests/snapshots/: lower_test__actors__actor_counter.snap  lower_test__actors__actor_receive_timeout.snap  lower_test__actors__adapter_reply.snap  lower_test__actors__ask_ok.snap  lower_test__actors__ask_timeout.snap  lower_test__actors__async_closure.snap  lower_test__actors__async_receive.snap  lower_test__arithmetic.snap  lower_test__bare_import.snap  lower_test__boolean_ops.snap  lower_test__branch_if_none.snap  lower_test__branch_with_struct.snap  lower_test__builtin_trait_dict.snap  lower_test__closures__closure_basic.snap  lower_test__closures__closure_capture.snap  lower_test__closures__lazy_own_demanding_use.snap  lower_test__closures__lazy_own_downcast.snap  lower_test__closures__lazy_own_explicit_own.snap  lower_test__closures__lazy_own_field_access.snap  lower_test__closures__lazy_own_shared_use.snap  lower_test__closures__own_closure_capture.snap  lower_test__coerce_borrow.snap  lower_test__coerce_borrow_then_consume.snap  lower_test__coerce_collection_error.snap  lower_test__comparison_chain.snap  lower_test__constrained_fn_ref_local.snap  lower_test__constrained_fn_ref_scope_capture.snap  lower_test__constrained_fn_ref_type_app.snap  lower_test__constrained_instance_multi_bound_ok.snap  lower_test__constrained_instance_nested_ok.snap  lower_test__constrained_instance_option_ok.snap  lower_test__constrained_instance_unconstrained_regression.snap  lower_test__constrained_ref_cross_module_apply.snap  lower_test__constrained_ref_import.snap  lower_test__data_types__branch_with_struct.snap  lower_test__data_types__generic_function.snap  lower_test__data_types__list_recursive.snap  lower_test__data_types__list_recursive_codegen.snap  lower_test__data_types__match_complete.snap  lower_test__data_types__match_guard_basic.snap  (+577 more)
crates/krypton/: Cargo.toml
crates/krypton/src/: inspect.rs  main.rs  repl.rs  repl_compile.rs  source_walker.rs
crates/krypton/tests/: cli.rs  inspect_test.rs  main.rs  repl_test.rs  timings_test.rs
crates/krypton/tests/krypton/: cli.rs  inspect.rs  mod.rs  repl.rs  timings.rs
crates/krypton/tests/snapshots/: inspect_test__inspect_basic.snap  inspect_test__inspect_consumed.snap  inspect_test__inspect_question_mark.snap  inspect_test__inspect_shadow.snap
crates/package_manager/: Cargo.toml
crates/package_manager/benches/: lock_bench.rs  manifest_bench.rs  resolve_bench.rs  version_bench.rs
crates/package_manager/src/: cache.rs  fetch.rs  init.rs  lib.rs  lock.rs  manifest.rs  manifest_edit.rs  resolve.rs  version.rs
crates/package_manager/tests/: cache_tests.rs  fetch_tests.rs  init_tests.rs  lock_tests.rs  manifest_edit_tests.rs  manifest_tests.rs  resolve_source_roots_test.rs  resolve_tests.rs  version_tests.rs
crates/package_manager/tests/common/: mod.rs
crates/package_manager/tests/snapshots/: lock_tests__generates_expected_toml_for_path_and_git_mix.snap
crates/parser/: Cargo.toml
crates/parser/benches/: parse_bench.rs
crates/parser/src/: ast.rs  diagnostics.rs  lexer.rs  lib.rs  parser.rs  platform.rs  pretty.rs  repl.rs  surface_lexer.rs  surface_parser.rs  surface_pretty.rs
crates/parser/tests/: diagnostics_test.rs  fixture_test.rs  lexer_test.rs  parser_test.rs  pretty_test.rs  snapshot_test.rs  surface_lexer_test.rs  surface_parser_test.rs  surface_pretty_test.rs
crates/parser/tests/parser/: diagnostics.rs  lexer.rs  mod.rs  parser_tests.rs  pretty.rs
crates/parser/tests/snapshots/: diagnostics_test__p0001_unexpected_token.snap  diagnostics_test__p0002_unclosed_paren.snap  diagnostics_test__p0003_invalid_literal.snap  diagnostics_test__p0004_pub_on_trait_method.snap  diagnostics_test__p0005_old_superclass_syntax.snap  fixture_test__arithmetic.snap  fixture_test__asi_basic.snap  fixture_test__basic_full_program.snap  fixture_test__basic_function_def.snap  fixture_test__basic_hello.snap  (+233 more)
crates/playground/: Cargo.toml
crates/playground/src/: lib.rs  repl.rs
crates/typechecker/: Cargo.toml
crates/typechecker/benches/: typecheck_bench.rs
crates/typechecker/src/: affine.rs  auto_close.rs  builtins.rs  diagnostics.rs  environment.rs  error.rs  exhaustiveness.rs  infer.rs  inference.rs  intrinsics.rs  lib.rs  link_context.rs  module_interface.rs  overload.rs  ownership.rs  prelude.rs  scc.rs  scope_ids.rs  stdlib_loader.rs  substitution.rs  trait_name_resolver.rs  trait_registry.rs  type_error.rs  type_registry.rs  typed_ast.rs  types.rs  unification.rs  unify.rs  visit.rs
crates/typechecker/tests/: diagnostics_test.rs  fixture_test.rs  infer_test.rs  link_context_test.rs  module_interface_test.rs  types_test.rs  unify_test.rs  visit_test.rs
(+2986 files in other folders)
