[workspace]
members = ["crates/parser", "crates/typechecker", "crates/alang", "crates/test-harness"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
chumsky = "0.12"
ariadne = "0.5"
insta = { version = "1", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }

