[workspace]
members = ["crates/parser", "crates/typechecker", "crates/krypton", "crates/test-harness", "crates/codegen"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
chumsky = "0.12"
ariadne = "0.5"
insta = { version = "1", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
ristretto_classfile = "0.29"
tempfile = "3"

