[workspace]
members = ["crates/parser", "crates/modules", "crates/typechecker", "crates/krypton", "crates/test-harness", "crates/codegen"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
chumsky = { version = "0.12", features = ["unstable", "pratt"] }
ariadne = "0.5"
insta = { version = "1", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
ristretto_classfile = "0.29"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["html_reports"] }
stacker = "0.1"
rstest = "0.25"

