[package]
name = "krypton-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
ristretto_classfile.workspace = true
krypton-parser = { path = "../parser" }
krypton-typechecker = { path = "../typechecker" }
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile = "3"
krypton-test-harness = { path = "../test-harness" }
krypton-modules = { path = "../modules" }
