[package]
name = "krypton-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
ristretto_classfile.workspace = true
krypton-parser = { path = "../parser" }
krypton-typechecker = { path = "../typechecker" }
krypton-ir = { path = "../ir" }
krypton-diagnostics = { path = "../diagnostics" }
tracing.workspace = true
zip = "2"
rustc-hash.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile = "3"
zip = { version = "2", features = ["default"] }
krypton-test-harness = { path = "../test-harness" }
krypton-modules = { path = "../modules" }
criterion.workspace = true
rstest.workspace = true

[[bench]]
name = "codegen_bench"
harness = false
