[package]
name = "krypton-codegen-js"
version.workspace = true
edition.workspace = true

[dependencies]
ariadne.workspace = true
krypton-ir = { path = "../ir" }
krypton-parser = { path = "../parser" }
krypton-typechecker = { path = "../typechecker" }

[dev-dependencies]
krypton-test-harness = { path = "../test-harness" }
krypton-modules = { path = "../modules" }
krypton-parser = { path = "../parser" }
tempfile = { workspace = true }
rstest.workspace = true
insta.workspace = true
