[package]
name = "krypton-ir"
version.workspace = true
edition.workspace = true

[dependencies]
krypton-typechecker = { path = "../typechecker" }
krypton-parser = { path = "../parser" }
rustc-hash.workspace = true

[dev-dependencies]
krypton-test-harness = { path = "../test-harness" }
krypton-modules = { path = "../modules" }
rstest.workspace = true
insta = "1"
