[package]
name = "krypton"
version.workspace = true
edition.workspace = true

[dependencies]
krypton-parser = { path = "../parser" }
krypton-modules = { path = "../modules" }
krypton-typechecker = { path = "../typechecker" }
krypton-codegen = { path = "../codegen" }
clap = { workspace = true }
tempfile = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
