[package]
name = "krypton"
version.workspace = true
edition.workspace = true

[dependencies]
krypton-parser = { path = "../parser" }
krypton-modules = { path = "../modules" }
krypton-typechecker = { path = "../typechecker" }
krypton-codegen = { path = "../codegen" }
krypton-codegen-js = { path = "../codegen_js" }
krypton-diagnostics = { path = "../diagnostics" }
krypton-ir = { path = "../ir" }
krypton-package-manager = { path = "../package_manager" }
clap = { workspace = true }
tempfile = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
rustyline.workspace = true

[dev-dependencies]
insta.workspace = true
zip = "2"
