[package]
name = "krypton-package-manager"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_derive = "1"
toml = "0.8"
toml_edit = "0.22"
semver = "1"
pubgrub = "0.4"

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "manifest_bench"
harness = false

[[bench]]
name = "version_bench"
harness = false

[[bench]]
name = "resolve_bench"
harness = false
