[package]
name = "krypton-parser"
version.workspace = true
edition.workspace = true

[dependencies]
chumsky.workspace = true
ariadne.workspace = true
serde.workspace = true
tracing.workspace = true
stacker.workspace = true

[dev-dependencies]
insta.workspace = true
strip-ansi-escapes = "0.2"
krypton-test-harness = { path = "../test-harness" }
criterion.workspace = true

[[bench]]
name = "parse_bench"
harness = false
