[package]
name = "krypton-parser"
version.workspace = true
edition.workspace = true

[dependencies]
chumsky.workspace = true
serde.workspace = true
krypton-diagnostics = { path = "../diagnostics" }
tracing.workspace = true
stacker.workspace = true

[dev-dependencies]
insta.workspace = true
krypton-test-harness = { path = "../test-harness" }
criterion.workspace = true
rstest.workspace = true

[[bench]]
name = "parse_bench"
harness = false
