[package]
name = "krypton-playground"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
include_dir = "0.7"
krypton-codegen-js = { path = "../codegen_js" }
krypton-modules = { path = "../modules" }
krypton-parser = { path = "../parser" }
krypton-typechecker = { path = "../typechecker" }
serde.workspace = true
strip-ansi-escapes = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
