[package]
name = "krypton-typechecker"
version.workspace = true
edition.workspace = true

[dependencies]
krypton-parser = { path = "../parser" }
krypton-modules = { path = "../modules" }
ariadne.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
krypton-test-harness = { path = "../test-harness" }
insta.workspace = true
criterion.workspace = true
krypton-modules = { path = "../modules" }

[[bench]]
name = "typecheck_bench"
harness = false
