[package]
name = "krypton-typechecker"
version.workspace = true
edition.workspace = true

[dependencies]
krypton-parser = { path = "../parser" }
krypton-modules = { path = "../modules" }
serde.workspace = true
krypton-diagnostics = { path = "../diagnostics" }
tracing.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
krypton-test-harness = { path = "../test-harness" }
insta.workspace = true
criterion.workspace = true
krypton-modules = { path = "../modules" }
rstest.workspace = true

[[bench]]
name = "typecheck_bench"
harness = false
